# learnpy

./: .gitignore  LR.py  README.md  func.py  learn_heapq.py  list.py  main.py  pyproject.toml  test.ipynb
agent/: test-apikey.py
algorithm/: heap_sort.py  quick_sort.py
learn_llm/: GroupedQueryAttention.ipynb  GroupedQueryAttention.py  causal-lm.ipynb  causal-lm.py  cross-entropy.py  dpo-ppo.py  output_attentions_tutorial.ipynb  output_attentions_tutorial.py  rl.py  self-attention.py  transformer-block.py
numpy/: np.py
