[project]
name = "learn-py"
version = "0.1.0"
description = "Python 学习项目：涵盖算法实现、LLM 注意力机制、强化学习（GRPO）、NumPy 与 AI Agent 实践"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
